# eco-damage-monitor

./: README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: app.yaml  models.example.yaml  sources.example.yaml  sources.yaml
scripts/: generate_report.py  init_db.py  run_daily_pipeline.py
site/: index.html
src/eco_damage_monitor/: cli.py  config.py  main.py
src/eco_damage_monitor/analytics/: __init__.py  reporting.py
src/eco_damage_monitor/cleaners/: __init__.py  text_cleaner.py
src/eco_damage_monitor/collectors/: __init__.py  base.py
src/eco_damage_monitor/collectors/forum/: __init__.py  example_forum.py
src/eco_damage_monitor/collectors/gov/: __init__.py  example_gov.py
src/eco_damage_monitor/collectors/news/: __init__.py  example_news.py
src/eco_damage_monitor/dashboards/: __init__.py  streamlit_app.py
src/eco_damage_monitor/dedup/: __init__.py  simhash_deduper.py
src/eco_damage_monitor/extractors/: __init__.py  event_extractor.py
src/eco_damage_monitor/geo/: __init__.py  normalizer.py
src/eco_damage_monitor/models/: __init__.py  schemas.py
src/eco_damage_monitor/nlp/: __init__.py  event_classifier.py  relevance.py  sentiment.py  topic_modeling.py  vector_search.py
src/eco_damage_monitor/parsers/: __init__.py  html_parser.py
src/eco_damage_monitor/storage/: __init__.py  database.py
src/eco_damage_monitor/utils/: __init__.py  logging_utils.py
tests/: test_analytics.py  test_cleaners.py  test_collectors.py  test_extractors.py  test_geo.py
tests/fixtures/: sample_docs.json
(+2 files in other folders)
